{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 60,
  "lineage": "716aeece-b8de-fa86-fea2-380086488a59",
  "resources": [
    {
      "module": "module.create_two_tier_aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "module.create_two_tier_aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:security-group/sg-0967d6b58cb26410c",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0967d6b58cb26410c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-demo-alb-security-group",
            "name_prefix": "",
            "owner_id": "041931672087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-alb-security-group"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb85ecb77aad62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_two_tier_aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_two_tier_aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "module.create_two_tier_aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:security-group/sg-0a4612b966f23f757",
            "description": "Security Group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4612b966f23f757",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL traffic from Web Servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f24d0f260832a5ec"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-demo-db-security-group",
            "name_prefix": "",
            "owner_id": "041931672087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-db-security-group"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-db-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb85ecb77aad62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_two_tier_aws.aws_security_group.alb_security_group",
            "module.create_two_tier_aws.aws_security_group.ec2_security_group",
            "module.create_two_tier_aws.aws_vpc.vpc",
            "module.create_two_tier_aws.data.external.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.create_two_tier_aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "module.create_two_tier_aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:security-group/sg-0f24d0f260832a5ec",
            "description": "Security Group for EC2 Web Servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f24d0f260832a5ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "5.70.73.39/32"
                ],
                "description": "Allow SSH from MY Public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0967d6b58cb26410c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-demo-ec2-security-group",
            "name_prefix": "",
            "owner_id": "041931672087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-ec2-security-group"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb85ecb77aad62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_two_tier_aws.aws_security_group.alb_security_group",
            "module.create_two_tier_aws.aws_vpc.vpc",
            "module.create_two_tier_aws.data.external.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.create_two_tier_aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.create_two_tier_aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:subnet/subnet-066c5cf49bd32e341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066c5cf49bd32e341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041931672087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-04eb85ecb77aad62c"
          },
          "dependencies": [
            "module.create_two_tier_aws.aws_vpc.vpc",
            "module.create_two_tier_aws.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:subnet/subnet-05ec32b852d1256ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec32b852d1256ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041931672087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-04eb85ecb77aad62c"
          },
          "dependencies": [
            "module.create_two_tier_aws.aws_vpc.vpc",
            "module.create_two_tier_aws.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.create_two_tier_aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.create_two_tier_aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041931672087:vpc/vpc-04eb85ecb77aad62c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-064181126f8c07205",
            "default_route_table_id": "rtb-0df9f7b7af0902898",
            "default_security_group_id": "sg-06c17ab6f314b5f55",
            "dhcp_options_id": "dopt-07481cbc279bd3fc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04eb85ecb77aad62c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df9f7b7af0902898",
            "owner_id": "041931672087",
            "tags": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Environment": "terraform-demo",
              "Name": "terraform-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}